- flatten print center model by embedding geo coordinates and addresses - implement unit test cases for print center services
